Closes ROOT-8245 (re-enable cling/reload/reloadvector test)
The underlying issue was solved in root-project/root (commit 74472caaa99a965dae87c85e1065c5bda29e9511). For more information, refer to the commit content.

--- a/cling/reload/CMakeLists.txt
+++ b/cling/reload/CMakeLists.txt
@@ -1,7 +1,7 @@
-#ROOTTEST_ADD_TEST(reloadvector
-#                  MACRO runreloadvector.C
-#                  OUTREF reloadvector.ref
-#                  LABELS roottest regression cling)
+ROOTTEST_ADD_TEST(reloadvector
+                  MACRO runreloadvector.C
+                  OUTREF reloadvector.ref
+                  LABELS roottest regression cling)
                   
                   
 ROOTTEST_ADD_TEST(ROOT-7364
