Add test for issue 8428 (scheduling of full object rules in tree)

--- a/root/tree/evolution/split/Makefile
+++ b/root/tree/evolution/split/Makefile
@@ -72,3 +72,8 @@ missingsplit.log: missingsplit_read_C.$(DllSuf) missingsplit.root
 
 missingsplit: missingsplit.log missingsplit.ref
 	$(TestDiff)
+
+execReadFileFullObjRule.clog: execCreateFileFullObjRule.success
+
+
+
